@@ -1,7 +1,3 @@
-
  * custom source folder should be created on start
 
- * only copy new files when building source directory parts/<buildout-section-name>
-
- * custom sphinxbuilder script should also copy new files from custom source
-   directory to builded source directory parts/<buildout-section-name>
+ * write some .ini to python script for full conf.py integration
