@@ -8,19 +8,24 @@ The recipe supports the following options:
 
 .. glossary::
 
-    build_directroy
-        Specify the build documentation root. Default to `docs`.
+    docs-directroy (default: `docs`)
+        Specify the build documentation root.
 
-    source_directory
-        Speficy the source directory of documentation. Defaults to
-				`{build_directory}/source`.
+    source-directory (default: `{build-directory}/source`)
+        Speficy the source directory of documentation.
 
-    outputs
+    outputs (default: `html`)
         Multiple-line value that defines what kind of output to produce. 
-        Can be `html`, `latex` or `pdf`. Defaults to `html`.
+        Can be `html`, `latex` or `pdf`.
         
-    script-name
-        The name of the script generated. Defaults to the name of the section.    
+    script-name (default: name of buildout section)
+        The name of the script generated
+
+		sphinx-options
+				Options to pass to sphinx-builder when building documentation.
+
+		interpreter
+				Path to python interpreter to use when invoking sphinx-builder.
         
     extra-paths
         Extra paths to be inserted into sys.path.
