@@ -1,6 +1,7 @@
 trunk (unreleased)
 ==================
 
+	- added sphinx-options and interpreter options [iElectric]
 	- added logging [iElectric]
   - fix issue, override source files in the templates directory
     using _import_templates [mr_savage]
